# alga_farm_baremetal

./: .ccls  .gitignore  .platformio.ini.swp  Makefile  alga_farm_baremetal.code-workspace  device.cok  device.cokcok  get-platformio.py  modbus_rtu_beta_test_kep_io_wrapper.opf  modbus_rtu_test_kep_io_wrapper.opf  modbus_test_kep_io_wrapper.opf  modbus_test_kep_io_wrapper.otc  mode_beta_with_plcl.ct  mode_with_plcl.bak  mode_with_plcl.ct  model.ct  platformio.config  platformio.includes  platformio.ini  untitled.pcf  untitled.pzw
.qtc_clangd/: compile_commands.json
.qtc_clangd/.cache/clangd/index/: Arduino.h.F7994C436DB7EB2F.idx  FrequencyTimer2.h.46FC894133832D29.idx  HardwareSerial.h.76959DA4619BD0A2.idx  Print.h.2A9C948AC541988E.idx  Printable.h.A666ED41DF1B768D.idx  Stream.h.AE8E0B7DA74E3AAF.idx  USBAPI.h.16AFBEA42A59F390.idx  WCharacter.h.36A0EC342E3F7753.idx  WString.h.832F3B1A444E6DFB.idx  binary.h.79903BD3E8FCA100.idx  common.h.8329BF74725A3539.idx  ctype.h.1B563466348D3A1B.idx  delay.h.C446A90C89BFDDD7.idx  delay_basic.h.8ADDA2E61B1ED6B3.idx  device.cpp.D83C97E5108F8100.idx  device.h.FC868E4DD5AFB8E0.idx  eeprom.h.8A7A833A8F67CA3F.idx  fuse.h.88A2A5DC5D388073.idx  (+26 more)
docs/: wiring_diagram
lib/device/: .device.cpp.swn  .device.cpp.swo  .device.cpp.swp  .device.h.swp  .freqGenerator.cpp.swp  .freqGenerator.h.swp  device.cpp  device.h  freqGenerator.cpp  freqGenerator.h  inputoutput.cpp
lib/plclib/: library.json  plclib.cpp
mytest/modbus_test/: CMakeLists.txt  main.cpp  modbus.cmake
src/: .main.cpp.swp  backup.files  main.cpp
test/: test_run_on_modbus.cpp
